@@ -1,6 +1,6 @@
 # Test buildd configuration
 
-[slave]
+[builder]
 architecturetag = i386
 filecache = /var/tmp/buildd/filecache
 bindhost = localhost
