@@ -2,7 +2,7 @@
 #
 # Configuration for buildd: @NAME@
 
-[slave]
+[builder]
 architecturetag = @ARCHTAG@
 filecache = /home/buildd/filecache-@NAME@
 bindhost = @BINDHOST@
