@@ -18,6 +18,7 @@ launchpad-buildd (190) UNRELEASED; urgency=medium
   * Skip tests involving daemonisation on Python 3 and Twisted < 16.4.0.
   * Only include mock in tests_require for Python 2.
   * Fix snap proxy testing for Python 3.
+  * Rename [slave] configuration section to [builder].
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 28 Apr 2020 10:19:27 +0100
 
